<resources>
    <string name="app_name">Hawabaaz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usrname">Username or E-mail</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_recipies">Recipies</string>
    <string name="title_activity_recipie_details">RecipieDetails</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="title_activity_order_status">OrderStatusActivity</string>
    <string name="title_activity_rating">RatingActivity</string>
</resources>
